testcases/test.config
#circle04 internet2test rip 1 1
dumptest2 test rip 1 1
#circle04 internet2test ospf 1 2
#internet2 internet2test ospf 1 2
#dumptest1 test rip 1 1
#dumptest2 test rip 1 1
